# meridian-runner-lib

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml
src/runner_lib/: __init__.py  checks.py  compat.py  constants.py  eda.py  full_binpb.py  io.py  orchestrator.py  periods.py  plots.py  run_full.py  run_mcmc.py  sampling.py  specs.py  synthetic.py
tests/: conftest.py  test_checks.py  test_compat.py  test_eda.py  test_full_binpb.py  test_io.py  test_orchestrator_mcmc.py  test_package.py  test_periods.py  test_plots.py  test_run_full.py  test_run_mcmc.py  test_specs.py  test_synthetic.py
