[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meridian-runner-lib"
version = "0.1.1"
description = "Batch-estimate and analyze multiple Google Meridian MMM setups"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10,<3.13"
dependencies = [
    "google-meridian[schema]==1.7.0",
    "vl-convert-python>=1.6",
]

[project.optional-dependencies]
colab = ["google-meridian[colab,and-cuda]==1.7.0"]
dev = ["pytest>=8", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["src/runner_lib"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
